@startuml
skinparam classAttributeIconSize 0

' ===========================
' Domain Model
' ===========================

abstract class User {}

User <|-- Client
User <|-- Lawyer
User <|-- Admin

class Client {}

class Lawyer {}

class Admin {}

class Process {}

class Document {}

class Notification {}

class Chat {}

class Message {}

class Appointment {}

' ===========================
' Relationships
' ===========================

' Processes
Client "1" -- "0..*" Process : initiates
Lawyer "1" -- "0..*" Process : handles

Process "1" *-- "0..*" Document : contains
Process "1" -- "0..*" Notification : generates
Process "0..1" -- "0..*" Appointment : schedules

' Notifications now linked to User (not Client)
User "1" -- "0..*" Notification : receives

' Chat & Messaging
Client "1" -- "0..*" Chat : participates
Lawyer "1" -- "0..*" Chat : participates
Chat "1" *-- "0..*" Message : contains
User "1" -- "0..*" Message : sends

' Appointments
Client "1" -- "0..*" Appointment : schedules
Lawyer "1" -- "0..*" Appointment : attends

@enduml
